--- a/src/styles.css
+++ b/src/styles.css
@@ -28,10 +28,12 @@
   }
   
   .card-grid {
+    animation: backInDown;
+    animation-duration: 1s;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: center;    
   }
   
   .card {
